--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=ProductService
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:mysql://localhost:3306/productDataBase
+spring.datasource.username=root
+spring.datasource.password=Vamsi@2307
+spring.jpa.show-sql: true
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
