--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,13 @@ spring.datasource.username=root
 spring.datasource.password=Vamsi@2307
 spring.jpa.show-sql: true
 
+spring.flyway.url=jdbc:mysql://localhost:3306/productdatabase
+spring.flyway.user=root
+spring.flyway.password=Vamsi@2307
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#spring.profiles.active=aws
